# vinyl-mpc

./: .gitignore  Cargo.toml  README.md  default_config.toml
src/: main.css  main.glade  main.rs
