[package]
name = "vinyl"
version = "0.1.0"
authors = ["Sam Lakerveld <darkwater124@gmail.com>"]

[dependencies]
config      = "^0.6.0"
futures     = "^0.1.14"
gdk         = "^0.5.3"
glib        = "^0.1.3"
gtk         = { version = "^0.1.3", features = [ "v3_10" ] }
mpd         = { git = "https://github.com/kstep/rust-mpd" }
relm        = { git = "https://github.com/darkwater/relm" }
relm-derive = "^0.9.2"
time        = "^0.1.37"
tokio-core  = "^0.1.8"
tokio-timer = "^0.1.1"
